Fix Single/404 layout issue
Jetpack likes/share buttons were interfering in the 404/Single pages.
The custom loop picked up like/share buttons in the tile’s excerpts.
Small other cosmetics.

--- a/css/textstyles-1.css
+++ b/css/textstyles-1.css
@@ -70,9 +70,9 @@
 	}
 */
 	#abstract h1 {
-	 	font-family: 'Montserrat', 'Open Sans Condensed', sans-serif;
-	    font-size: 8rem;
-	    line-height: 7rem;
+	 	font-family: 'Montserrat', sans-serif;
+	    font-size: 6rem;
+	    line-height: 5rem;
 	    font-weight: 400;
 /*	    margin-top: 0px;*/
 	    margin-bottom: 1.7rem;
